# communicator

./: CMakeLists.txt  README.md  main.cpp  recver.cpp  sender.cpp
src/: CMakeLists.txt  communicator.cpp  communicator.hpp
src/direct_trans/: direct_trans.cpp
src/include/: communicator.hpp  direct_trans.hpp  topic.hpp
src/utilities/: CMakeLists.txt  aexception.cpp  systools.cpp  systools.hpp
